# CRUX

./: .env.example  .gitignore  ACADEMIC-PAPER.md  CLAUDE.md  FINAL-RESULTS.md  LICENSE  MILESTONE-4.1-RESULTS.md  README.md  ZERO-F1-FIX-RESULTS.md  ZERO-F1-FIX.md  changelog.md  generate_full_dataset.py  prd.md  pyproject.toml  test_storage.bicep  test_zero_f1_labels.py  transcript.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
crux/: cli.py
crux/dataset/: __init__.py  generator.py  template_level_generator.py  validator.py
crux/ml/: __init__.py  dataset.py  evaluation.py  features.py  graph_features.py  graph_loader.py  graph_models.py  graph_trainer.py  models.py
crux/mutations/: __init__.py  appservice.py  base.py  containerregistry.py  database.py  keyvault.py  loadbalancer.py  network.py  storage.py  vm.py
crux/rules/: evaluator.py
crux/templates/: compiler.py  extractor.py  fetcher.py  graph.py
dataset/maximum-001/: README.md
dataset/maximum-template-level/: README.md  template_level_data.csv
dataset/sample/: README.md  data.csv  labels.json  metadata.json
dataset/sample/baseline/: resources.json
dataset/sample/graphs/: main_graph.json
dataset/sample/mutated/: resources.json
docs/: CRUX_Template_Level_Dataset_Specification.md  Generating_Maximum_Dataset.md  changelog.md  csv-export-example.md  prd.md
harness/: crux.py
modules/: functionapp.bicep  keyvault.bicep  nsg.bicep  publicip.bicep  storage.bicep  subnet.bicep  vm.bicep  vmss.bicep  vnet.bicep
mutations/: constraints.yaml  recipes.yaml
params/: func_storage_kv.json
rules/: appservice.yaml  containerregistry.yaml  database.yaml  keyvault.yaml  loadbalancer.yaml  network.yaml  storage.yaml  vm.yaml
scenarios/: func_storage_kv.yaml  vm_publicip_nsg.yaml
scripts/: generate_full_dataset.py  generate_maximum_template_dataset.py
tests/: __init__.py  test_gnn.py  test_ml.py  test_mutations.py  test_rules.py  test_template_level_generator.py
